...
        <ImageView
            android:id="@+id/logout"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/exit"
            android:onClick="esci"
            android:layout_alignEnd="@id/username"
            android:scaleType="fitXY" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/scuro"
...
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/barraricerca">

            <Button
                android:id="@+id/casellacerca"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/noncercalente"
                android:onClick="effettuaRicerca">

            </Button>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/scrivicerca"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:hint="Effettua una ricerca..."
                android:textColorHint="#B1B1B1"
                android:layout_toLeftOf="@id/casellacerca"
                android:fontFamily="@font/cr"
...
