...
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:background="@drawable/pulsantimenu"
            android:layout_weight="1" >

            <RelativeLayout
                android:id="@+id/button2"
                android:layout_height="fill_parent"
                android:background="@color/giallo"
                android:onClick="passasezione"
                android:layout_weight="1" >
            <RelativeLayout
                android:id="@+id/button2a"
...
