<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/riga"
    android:layout_margin="5dp"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/foto"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:padding="3sp"
        android:layout_margin="3sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/username"
            android:fontFamily="@font/cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/info"
            android:fontFamily="@font/cr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"/>

        <TextView
            android:id="@+id/stats"
            android:fontFamily="@font/cr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"/>

    </LinearLayout>
</LinearLayout>
